--- a/app/src/main/res/layout/content_dash.xml
+++ b/app/src/main/res/layout/content_dash.xml
@@ -60,12 +60,22 @@
         android:text="Daily Work Program View"
         android:textColor="#ffffff" />
 
+    <Button
+        android:id="@+id/workview"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:background="#AF4F8F"
+        android:text="Daily View Single Underdev"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/datepicker"
+        android:layout_alignParentStart="true" />
+
     <TextView
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/datepicker"
+        android:layout_below="@+id/workview"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:text="@string/appby"
