--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,6 +14,9 @@
         <item
             android:id="@+id/nav_manage"
             android:title="Daily Work Program View" />
+        <item
+            android:id="@+id/nav_dash"
+            android:title="Back to Dash" />
     </group>
 
     <!--  <item android:title="Communicate">
