--- a/app/src/main/res/layout/activity_workentryviewdetails.xml
+++ b/app/src/main/res/layout/activity_workentryviewdetails.xml
@@ -1,85 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ayon.rahman.shafiqur.bptl3ui.workentryviewdetails">
+    android:fitsSystemWindows="true">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Daily Work Update Details"
-        android:id="@+id/textView22"
-        android:gravity="left"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="20dp" />
+    <include
+        layout="@layout/app_bar_workentryviewdetails"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-    <TextView
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Client Name Will Appear Here "
-        android:id="@+id/textView23"
-        android:gravity="left"
-        android:layout_below="@+id/textView22"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp" />
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Workstation Name Will Appear Here"
-        android:id="@+id/textView24"
-        android:gravity="left"
-        android:layout_below="@+id/textView23"
-        android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Job Name Will Appear Here"
-        android:id="@+id/textView25"
-        android:gravity="left"
-        android:layout_below="@+id/textView24"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Medium Of Transport Will Appear Here"
-        android:id="@+id/textView26"
-        android:gravity="left"
-        android:layout_below="@+id/textView25"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Work Start Time Will Appear Here"
-        android:id="@+id/textView27"
-        android:gravity="left"
-        android:layout_below="@+id/textView26"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Work End Time Will Appear Here"
-        android:id="@+id/textView28"
-        android:gravity="left"
-        android:layout_below="@+id/textView27"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Remarks Will Appear Here"
-        android:id="@+id/textView29"
-        android:gravity="left"
-        android:layout_below="@+id/textView28"
-        android:layout_alignParentStart="true" />
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
